# StringVariable

./: CMakeLists.txt  documentation.md  main.cpp
include/: StringVariable.h
src/: Stringvariable.cpp
